Remove disturbing white background

--- a/Serien/01/Aufgabe 2 - Laden und Speichern von Daten.ipynb
+++ b/Serien/01/Aufgabe 2 - Laden und Speichern von Daten.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#f6f6f6;border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
+    "<p style=\"border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
     "<strong>Lernziele:</strong><br/>\n",
     "    Diese Übung führt sie an den Umgang mit den externen Dateien heran. Dies ist insbesondere wichtig, da Messdaten häufig als externes Dokument vorliegen und importiert werden müssen bevor sie ausgewertet werden können.\n",
     "</p>\n",
     "\n",
-    "<p style=\"background-color:#f6f6f6;border-left:5px solid blue;padding:0.6em;box-sizing:border-box;\">\n",
+    "<p style=\"border-left:5px solid blue;padding:0.6em;box-sizing:border-box;\">\n",
     "<strong>Wichtigste Funktionen für diese Übung:</strong><br/>\n",
     "    Dies sind die wichtigsten Funktionen die sie während dieser Übung benötigen:<br>\n",
     "    Die jeweilige Syntax beschreibt eine examplarische Verwendung. Im allgemeinen haben die Funktionen weitere Argumente die übergeben werden können. Der Funktionsname ist jeweils ein Link zur offiziellen Dokumentation, welche alle Argumente darlegt und ihre Funktion beschreibt. <br>\n",
