--- a/Serien/01/Aufgabe 1 - Arrays.ipynb
+++ b/Serien/01/Aufgabe 1 - Arrays.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#f6f6f6;border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
+    "<p style=\"border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
     "<strong>Lernziele:</strong><br/>\n",
     "    Diese Übung zeigt ihnen die grundlegende Synatax für das Erstellen und manipiulieren von Arrays. Ausserdem werden die Syntax für grundlegende Kontrollstrukturen (<em>for-loop & if-condition</em>) eingeführt.\n",
     "</p>"
