Remove disturbing white background

--- a/exercises/03/Aufgabenblatt3_Normalverteilung_und_Messgenauigkeit.ipynb
+++ b/exercises/03/Aufgabenblatt3_Normalverteilung_und_Messgenauigkeit.ipynb
@@ -13,12 +13,12 @@
    "id": "3c60d5da-fd77-47df-b5f8-11098f218873",
    "metadata": {},
    "source": [
-    "<p style=\"background-color:#f6f6f6;border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
+    "<p style=\"border-left:5px solid red;padding:0.6em;box-sizing:border-box;\">\n",
     "<strong>Lernziele:</strong><br/>\n",
     "    Diese Übung zeigt ihnen die Synatax für das erstellen von Funktionen in Python. Ausserdem führen wir die ersten statistischen Berechnungen durch und lernen diese in sinnvollen Plots darzustellen.\n",
     "</p>\n",
     "\n",
-    "<p style=\"background-color:#f6f6f6;border-left:5px solid blue;padding:0.6em;box-sizing:border-box;\">\n",
+    "<p style=\"border-left:5px solid blue;padding:0.6em;box-sizing:border-box;\">\n",
     "<strong>Wichtigste neuen Funktionen für diese Übung:</strong><br/>\n",
     "    Dies sind die wichtigsten Funktionen die sie während dieser Übung benötigen:<br>\n",
     "    Die jeweilige Syntax beschreibt eine examplarische Verwendung. Im allgemeinen haben die Funktionen weitere Argumente die übergeben werden können. Der Funktionsname ist jeweils ein Link zur offiziellen Dokumentation, welche alle Argumente darlegt und ihre Funktion beschreibt. <br>\n",
