--- a/exercises/bonus-2/Bonus-2.ipynb
+++ b/exercises/bonus-2/Bonus-2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Erstes Notenbonus-Quiz"
+    "# Zweites Notenbonus-Quiz"
    ],
    "metadata": {
     "collapsed": false
